[gd_scene load_steps=15 format=2]

[ext_resource path="res://GameElmnts/Pause.gd" type="Script" id=1]
[ext_resource path="res://img/Items/items.png" type="Texture" id=2]
[ext_resource path="res://img/Menu/JouerB.png" type="Texture" id=3]
[ext_resource path="res://img/Menu/MenuB.png" type="Texture" id=4]
[ext_resource path="res://Sounds/menuDwn.wav" type="AudioStream" id=5]
[ext_resource path="res://Sounds/menuUp.wav" type="AudioStream" id=6]
[ext_resource path="res://Sounds/item.wav" type="AudioStream" id=7]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 0, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 16, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 32, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "Cube",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ) ],
"loop": true,
"name": "CubeOK",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ) ],
"loop": true,
"name": "ItemIce",
"speed": 5.0
}, {
"frames": [ SubResource( 4 ) ],
"loop": true,
"name": "ItemSand",
"speed": 5.0
}, {
"frames": [ SubResource( 5 ) ],
"loop": true,
"name": "ItemShovel",
"speed": 5.0
}, {
"frames": [ SubResource( 6 ) ],
"loop": true,
"name": "ItemString",
"speed": 5.0
} ]

[node name="PauseCanvas" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="Back" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.196078, 0.196078, 0.196078, 0.588235 )

[node name="ButtonRes" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -120.0
margin_top = 27.0
margin_right = 371.0
margin_bottom = 172.0
rect_scale = Vector2( 0.5, 0.5 )
icon = ExtResource( 3 )

[node name="ButtonMM" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -120.0
margin_top = 156.0
margin_right = 371.0
margin_bottom = 301.0
rect_scale = Vector2( 0.5, 0.5 )
icon = ExtResource( 4 )

[node name="SoundGroup" type="Node2D" parent="."]

[node name="MenuUp" type="AudioStreamPlayer" parent="SoundGroup"]
stream = ExtResource( 6 )
pitch_scale = 2.0

[node name="MenuDwn" type="AudioStreamPlayer" parent="SoundGroup"]
stream = ExtResource( 5 )
pitch_scale = 1.5

[node name="ItemGet" type="AudioStreamPlayer" parent="SoundGroup"]
stream = ExtResource( 7 )
volume_db = 8.0

[node name="ItemIceBox" type="AnimatedSprite" parent="."]
position = Vector2( 595, 0 )
scale = Vector2( 5, 5 )
frames = SubResource( 7 )
animation = "Cube"

[node name="ItemIce" type="AnimatedSprite" parent="ItemIceBox"]
visible = false
frames = SubResource( 7 )
animation = "ItemIce"

[node name="ItemIceOK" type="AnimatedSprite" parent="ItemIceBox"]
visible = false
frames = SubResource( 7 )
animation = "CubeOK"

[node name="ItemShovelBox" type="AnimatedSprite" parent="."]
position = Vector2( 502, 0 )
scale = Vector2( 5, 5 )
frames = SubResource( 7 )
animation = "Cube"

[node name="ItemShovel" type="AnimatedSprite" parent="ItemShovelBox"]
visible = false
frames = SubResource( 7 )
animation = "ItemShovel"

[node name="ItemShovelOK" type="AnimatedSprite" parent="ItemShovelBox"]
visible = false
frames = SubResource( 7 )
animation = "CubeOK"

[node name="ItemSandBox" type="AnimatedSprite" parent="."]
position = Vector2( 782, 0 )
scale = Vector2( 5, 5 )
frames = SubResource( 7 )
animation = "Cube"

[node name="ItemSand" type="AnimatedSprite" parent="ItemSandBox"]
visible = false
frames = SubResource( 7 )
animation = "ItemSand"

[node name="ItemSandOK" type="AnimatedSprite" parent="ItemSandBox"]
visible = false
frames = SubResource( 7 )
animation = "CubeOK"

[node name="ItemStringBox" type="AnimatedSprite" parent="."]
position = Vector2( 688, 0 )
scale = Vector2( 5, 5 )
frames = SubResource( 7 )
animation = "Cube"

[node name="ItemString" type="AnimatedSprite" parent="ItemStringBox"]
visible = false
frames = SubResource( 7 )
animation = "ItemString"

[node name="ItemStringOK" type="AnimatedSprite" parent="ItemStringBox"]
visible = false
frames = SubResource( 7 )
animation = "CubeOK"

[connection signal="pressed" from="ButtonRes" to="." method="_on_ButtonRes_pressed"]
[connection signal="pressed" from="ButtonMM" to="." method="_on_ButtonMM_pressed"]
